--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devextreme": "^19.2.6",
     "devextreme-react": "^19.2.6",
     "office-ui-fabric-react": "^7.103.0",
+    "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
