--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
-    "fontello-cli": "^0.5.0"
+    "fontello-cli": "^0.5.0",
+    "prettier": "^1.19.1"
   }
 }
