--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "add": "^2.0.6",
+    "camel-case": "^4.1.1",
+    "captalize": "^1.0.3",
+    "change-case": "^4.1.1",
+    "class-validator": "^0.11.0",
     "devextreme": "^19.2.6",
     "devextreme-react": "^19.2.6",
+    "linqts": "^1.12.6",
     "office-ui-fabric-react": "^7.103.0",
     "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
   },
