--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src"],
-  "files": ["src/styles/styled.d.ts"]
+  "files": ["src/styles/styled.d.ts", "./src/services/entities/Entity.ts"]
 }
