--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src"],
-  "files": ["src/styles/styled.d.ts", "./src/services/entities/Entity.ts"]
+  "files": ["src/styles/styled.d.ts"]
 }
