feat(grid): PADRAO DECLARATIVO DE COLUNAS #0
Padrão de decorator nas colunas não estáva resolvendo todos problemas
para a DxDataGrid, então foi cria um padrão declarativo igual ao
AspNetMVC da DevExpress

Closed #0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src"],
-  "files": ["src/styles/styled.d.ts"]
+  "files": ["src/styles/styled.d.ts", "./src/services/entities/Entidade.ts"]
 }
