--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.0",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.0.1",
+    "ts-object-path": "^0.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/devextreme": "^16.2.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "fontello-cli": "^0.5.0",
